[tool.poetry]
name = "jetlend"
version = "0.1.0"
description = ""
authors = ["Aleksei Grachev <aleksei.grachev@alberblanc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
requests = "^2.32.3"
pandas = "^2.2.2"
tqdm = "^4.66.4"
click = "^8.1.7"
loguru = "^0.7.2"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
